--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ APP_SECRET=b12ecb59d552048d8428e6c793fbfeb4
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
+# O webpack do Symfony já adicionou a variável abaixo.
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
@@ -33,6 +34,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> symfony/messenger ###
 # Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=protocolo://caminho
 # MESSENGER_TRANSPORT_DSN=doctrine://default
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
