Definindo um handler

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -26,6 +26,7 @@ framework:
 
         routing:
             # App\Message\MinhaMensagem: meu_outro_transporte
+            App\Messages\SeriesWasCreated: async
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
