--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -27,6 +27,7 @@ framework:
         routing:
             # App\Message\MinhaMensagem: meu_outro_transporte
             App\Messages\SeriesWasCreated: async
+            App\Messages\SeriesWasDeleted: async
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
